Project

General

Profile

Actions

Bug #44878

closed

mimic: incorrect SSD bluestore compression/allocation defaults

Added by Frank Schilder about 4 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
4 - irritation
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The current defaults for SSD are:

bluestore_compression_min_blob_size_ssd 8192
bluestore_min_alloc_size_ssd 16384

For SSD storage these defaults will imply no space gain for SSD as the uncompressed blob will use the same amount of space as the compressed one as both will require the same allocation size.

Quoting Igor Fedotov:

Presumably this was an incomplete backport from Nautilus which has
proper numbers: 32K and 16K respectively.

Actions #1

Updated by Greg Farnum about 4 years ago

  • Project changed from Ceph to bluestore
  • Category deleted (OSD)
Actions #2

Updated by Igor Fedotov about 4 years ago

  • Status changed from New to Fix Under Review
  • Severity changed from 3 - minor to 4 - irritation
  • Pull request ID set to 34420

In fact this bug causes no real issues - it's just result in some confusion for users. BlueStore has some code which ensures min blob size to be twice as large as min alloc size.
And even without such a validation this would just cause redundant compression application attempt for too small writes. Which wouldn't succeed due to the lack of actual space saving.

Hence resulting fix is just a cleanup to avoid future confusions.

Actions #3

Updated by Neha Ojha about 4 years ago

  • Subject changed from incorrect SSD bluestore compression/allocation defaults to mimic: incorrect SSD bluestore compression/allocation defaults
Actions #4

Updated by Igor Fedotov about 3 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF