common/options: fix default for bluestore_compression_min_blob_size

Fixes: https://tracker.ceph.com/issues/44878
Signed-off-by: Igor Fedotov <ifedotov@suse.com>